Grid block modal

--- a/components/blocks/Grid/Grid.module.scss
+++ b/components/blocks/Grid/Grid.module.scss
@@ -4,6 +4,8 @@
 .grid {
   display: flex;
   flex-wrap: wrap;
+  position: relative;
+
 
   input {
     display: none;
@@ -31,11 +33,24 @@
 // end todo area...
 
 .modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: orange;
   opacity: 1;
-  transition: opacity .5s ease;
-}
+  transition: opacity .5s;
 
-.modal_close {
-  opacity: 0;
-  transition: opacity .5s ease; 
+  &_content {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  &_close {
+    pointer-events: none;
+    opacity: 0;
+  }
 }
