--- a/components/blocks/Grid/Grid.module.scss
+++ b/components/blocks/Grid/Grid.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
+  container-type: inline-size;
 
 
   input {
@@ -12,11 +13,16 @@
   }
 
   label {
-    padding: 0.5ch 1em;
+    padding: 1cqw;
+    border: solid 1px $color-3;
+    border-radius: 60px;
+    min-width: 150px;
+    text-align: center;
+    margin: 6cqw 1.5cqw 0;
   }
 
   input:checked + label {
-    outline: 1px solid red;
+    box-shadow: rgba(48, 198, 173, 0.4) 0px 4px 24px 0px;
   }
 }
 
@@ -24,33 +30,103 @@
   display: none;
   flex: 1 1 100%;
   order: 1;
+  background: transparentize($color-4, .75);
+  border-radius: 16px;
+  border: solid 1px #323f4c;
+  padding: 6cqw;
+  margin-top: 6cqw;
+  
 
   input:checked + label + & {
+    @include grid;
+    gap: 2cqw;
+  }
+}
+
+.item {
+  grid-column: auto / span 24;
+
+  @include tablet-min {
+    grid-column: auto / span 6;
+  }
+  
+}
+
+.image {
+  position: relative;
+  aspect-ratio: 3/4;
+  overflow: hidden;
+  border-radius: 16px;
+  border: solid 1px #323f4c;
+
+  img {
+    max-width: 100%;
     display: block;
+    position: absolute;
+    inset: 0;
   }
 }
 
 // end todo area...
 
 .modal {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: orange;
+  background: transparentize($color-1, .05);
   opacity: 1;
   transition: opacity .5s;
+  overflow: scroll;
+  
 
   &_content {
     position: sticky;
     top: 0;
     left: 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
+
+    @include desktop-min {
+      padding: 80px;
+    }
+    
+  }
+
+  &_text {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+    h2, p {
+      color: $color-2;
+      text-align: center;
+    }
   }
 
   &_close {
     pointer-events: none;
     opacity: 0;
+  }
+
+  button {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    left: auto;
+    padding: 12px;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: unset;
+    cursor: pointer;
   }
 }
