--- a/components/blocks/Grid/Grid.module.scss
+++ b/components/blocks/Grid/Grid.module.scss
@@ -154,4 +154,9 @@
     background: transparent;
     color: $color-2;
   }
+
+  .btn_label {
+    text-align: center;
+    color: $color-3;
+  }
 }
