--- a/components/blocks/SpacingSwitch/SpacingSwitch.module.scss
+++ b/components/blocks/SpacingSwitch/SpacingSwitch.module.scss
@@ -2,7 +2,7 @@
 
 .spacingswitch {
   container-type: inline-size;
-  padding: 120px 24px;
+  padding: 120px 24px 0;
 
   img {
     max-width: 100%;
