--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -3,7 +3,8 @@
 .main { 
     color: $color-2;
     min-height: 100vh;
-    max-width: 1400px;
+    max-width: 1800px;
     margin: 0 auto;
     padding: 80px 32px;
+    outline: none;
 }
