--- a/components/blocks/Rotator/RotatorModal.module.scss
+++ b/components/blocks/Rotator/RotatorModal.module.scss
@@ -68,6 +68,10 @@
       text-align: center;
       border: solid 1px #aab2b8;
     }
+
+    a {
+      text-decoration: none;
+    }
   }
 
   &_button {
