--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -8,3 +8,65 @@
     padding: 80px 32px;
     outline: none;
 }
+
+
+
+.menu_trigger {
+
+        svg {
+            width: 24px;
+            height: 24px;
+
+            @include tablet-min {
+              width: 32px;
+              height: 32px;
+            } 
+        }
+    }
+    
+    .menu_content {
+        position: fixed;
+        background-color: $color-1;
+        width: 280px;
+        height: 100vh;
+        top: 0;
+        right: -280px;
+        transition: 0.5s;
+        color: $color-2;
+        padding: 32px;
+
+        svg {
+            width: 16px;
+            height: 16px;
+
+            @include tablet-min {
+              width: 24px;
+              height: 24px;
+            } 
+        }
+
+        ul {
+            padding: 0;
+            list-style: none;
+            font-weight: 500;
+        }
+
+        li {
+            padding: 20px 0 0;
+
+            a {
+                color: $color-2;
+                text-decoration: none;
+                transition: color .3s ease;
+
+                &:hover {
+                    color: $color-4;
+                }
+            }
+        }
+
+      }
+      
+      .menu_content:target {
+        right: 0;
+      }
