styles and fixes

--- a/components/blocks/Rotator/RotatorModalFeature.module.scss
+++ b/components/blocks/Rotator/RotatorModalFeature.module.scss
@@ -10,6 +10,16 @@
   border: solid 1px #aab2b8;
 }
 
+.feature {
+  cursor: pointer;
+  box-shadow: rgba(48, 198, 173, 0) 0px 4px 24px 0px;
+  transition: box-shadow .5s ease;
+
+  &:hover {
+    box-shadow: rgba(48, 198, 173, 0.4) 0px 4px 24px 0px;
+  }
+}
+
 .current {
   box-shadow: rgba(48, 198, 173, 0.4) 0px 4px 24px 0px;
 }
